# pear

./: CMakeLists.txt  README.md  README.pl.md
examples/: basic.pr  complex.pr  complex2.pr  complex_example.pr  fibonacci.pr  list.pr  simple.pl  simple_math.pr  simple_math_2.pr  sort.pr
include/pear/: Executor.hpp  SourceCodeFile.hpp
include/pear/ast/: AbstractSyntaxTree.hpp  DecimalNumber.hpp  FloatingPointNumber.hpp  Function.hpp  Literal.hpp  Node.hpp  NodePrinter.hpp  PrintableTree.hpp  String.hpp  Term.hpp  TermPrinter.hpp  TermVisitor.hpp  Tree.hpp  TreePrinter.hpp  Variable.hpp  Visitable.hpp
include/pear/lexer/: Lexeme.hpp  LexemePosition.hpp  LexemePrinter.hpp  Lexer.hpp  LexerException.hpp  Token.hpp  TokenType.hpp
include/pear/parser/: Parser.hpp  ParserException.hpp
include/pear/pearlog/: BuiltinPredicate.hpp  Interpreter.hpp  InterpreterException.hpp  Predicate.hpp  PredicatesManager.hpp  RuntimeDefinedPredicate.hpp  SideUnification.hpp  Substitution.hpp  Unification.hpp  UnificationException.hpp  UnificationPrinter.hpp
include/pear/pearlog/predicates/: And.hpp  Call.hpp  Eval.hpp  False.hpp  Module.hpp  Or.hpp  Print.hpp  True.hpp  Unify.hpp
src/: main.cpp
src/ast/: AbstractSyntaxTree.cpp  Function.cpp  Literal.cpp  Node.cpp  NodePrinter.cpp  PrintableTree.cpp  Term.cpp  TermPrinter.cpp  Tree.cpp  TreePrinter.cpp  Variable.cpp
src/lexer/: Lexeme.cpp  LexemePosition.cpp  LexemePrinter.cpp  Lexer.cpp  Token.cpp  TokenType.cpp
src/parser/: Parser.cpp
src/pearlog/: Interpreter.cpp  Predicate.cpp  PredicatesManager.cpp  RuntimeDefinedPredicate.cpp  SideUnification.cpp  Substitution.cpp  Unification.cpp  UnificationPrinter.cpp
src/pearlog/predicates/: And.cpp  Call.cpp  Eval.cpp  False.cpp  Module.cpp  Or.cpp  Print.cpp  True.cpp  Unify.cpp
